--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="display"></div>
+    <div class="display-1"></div>
+    <div class="display-2"></div>
+    <div class="display-3"></div>
     <div class="container">
         <div class="digits">
             <button class="digits" id="1">1</button>
@@ -22,16 +24,16 @@
             <button class="digits" id="0">0</button>
         </div>
         <div class="operators">
-            <button id="+">+</button>
-            <button id="-">-</button>
-            <button id="x">x</button>
-            <button id="÷">÷</button>
+            <button class="operators" id="+">+</button>
+            <button class="operators" id="-">-</button>
+            <button class="operators" id="x">x</button>
+            <button class="operators" id="÷">÷</button>
         </div>
         <div class="equals">
-            <button>=</button>
+            <button id="equals">=</button>
         </div>
         <div class="clear">
-            <button>Clear</button>
+            <button id="clear">Clear</button>
         </div>
     </div>
 </body>
