Implement calculator function

--- a/index.html
+++ b/index.html
@@ -7,32 +7,30 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="display-1"></div>
-    <div class="display-2"></div>
-    <div class="display-3"></div>
+    <input type="text" id="display" value="">
     <div class="container">
-        <div class="digits">
-            <button class="digits" id="1">1</button>
-            <button class="digits" id="2">2</button>
-            <button class="digits" id="3">3</button>
-            <button class="digits" id="4">4</button>
-            <button class="digits" id="5">5</button>
-            <button class="digits" id="6">6</button>
-            <button class="digits" id="7">7</button>
-            <button class="digits" id="8">8</button>
-            <button class="digits" id="9">9</button>
-            <button class="digits" id="0">0</button>
+        <div>
+            <button class="digits">1</button>
+            <button class="digits">2</button>
+            <button class="digits">3</button>
+            <button class="digits">4</button>
+            <button class="digits">5</button>
+            <button class="digits">6</button>
+            <button class="digits">7</button>
+            <button class="digits">8</button>
+            <button class="digits">9</button>
+            <button class="digits">0</button>
         </div>
-        <div class="operators">
+        <div>
             <button class="operators" id="+">+</button>
             <button class="operators" id="-">-</button>
-            <button class="operators" id="x">x</button>
-            <button class="operators" id="÷">÷</button>
+            <button class="operators" id="*">x</button>
+            <button class="operators" id="/">÷</button>
         </div>
-        <div class="equals">
-            <button id="equals">=</button>
+        <div>
+            <button id="calculate">=</button>
         </div>
-        <div class="clear">
+        <div>
             <button id="clear">Clear</button>
         </div>
     </div>
